tests/ui/slice_lit_syntax.gopp
package main
func main() {
    ys := []int //~ ERROR slice literal []T needs {values}
    println(ys)
    ws := []int{1, 2
        println(ws) //~ ERROR expected "}", got "println"
    }
